# cmse492-nba-player-clustering

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: 01_eda_and_clustering.ipynb
src/: cluster.py
tests/: test_cluster.py
